RESOLVED FIXED64637
DFG JIT operationCompareEqual does not inline JSValue::equalSlowCaseInline
https://bugs.webkit.org/show_bug.cgi?id=64637
Summary DFG JIT operationCompareEqual does not inline JSValue::equalSlowCaseInline
Filip Pizlo
Reported 2011-07-15 15:37:14 PDT
The DFG JIT's slow-case implementation of operationCompareEqual makes an inline call to JSValue::equal, which checks if the operands are integers, and if not, makes a slow call to JSValue::equalSlowCase. But operationCompareEqual will only be called if the operands are known to not be integers. Thus, operationCompareEqual should inline the slow-case implementation.
Attachments
the patch (1.32 KB, patch)
2011-07-15 15:39 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2011-07-15 15:39:25 PDT
Created attachment 101056 [details] the patch
WebKit Review Bot
Comment 2 2011-07-17 02:02:39 PDT
Comment on attachment 101056 [details] the patch Clearing flags on attachment: 101056 Committed r91168: <http://trac.webkit.org/changeset/91168>
WebKit Review Bot
Comment 3 2011-07-17 02:02:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.