DFG JIT operationCompareEqual does not inline JSValue::equalSlowCaseInline. https://bugs.webkit.org/show_bug.cgi?id=64637

Patch by Filip Pizlo <fpizlo@apple.com> on 2011-07-17
Reviewed by Gavin Barraclough.

* dfg/DFGOperations.cpp:

Canonical link: https://commits.webkit.org/80418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91168 268f45cc-cd09-0410-ab3c-d52691b4dbfc